--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -1,13 +1,14 @@
 # This workflow is used to chech the code changes in pull requests
 
 name: Pull Request Checks
+env:
+  MongoDB__connection string: ${{secrets.MONGODB_CONNECTION_STRING}}
 
 on: 
   pull_request:
     types: [opened, synchronize, reopened, labeled]
   
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
