--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -53,7 +53,7 @@ jobs:
   label_success:
     runs-on: ubuntu-latest
     #if: github.event.action != 'labeled'
-    if: github.event.action == 'pull_request'
+    if: github.action_name == 'pull_request'
     needs: [build, unit-tests, integration-tests]
     steps:
       - uses: actions-ecosystem/action-add-labels@v1
