--- a/FSharp project/AwsLambda/AWS Lambda.fsproj
+++ b/FSharp project/AwsLambda/AWS Lambda.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Portfolio.Api</AssemblyName>
     <RootNamespace>Portfolio.Api</RootNamespace>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
