--- a/FSharp project/Core/Core.fsproj
+++ b/FSharp project/Core/Core.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Portfolio.Api.Core</AssemblyName>
     <RootNamespace>Portfolio.Api.Core</RootNamespace>
     <WarnOn>3390;$(WarnOn)</WarnOn>
