--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -6,7 +6,8 @@ configValidationMode: error
 
 provider:
   name: aws
-  runtime: dotnetcore3.1
+  #runtime: dotnetcore3.1
+  runtime: net6.0
   stackName: Portfolio-FSharp # CloudFormation stack name
   apiName: Portfolio-FSharp.2021 # API Gateway name  
   deploymentBucket:
