--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -183,23 +183,6 @@ functions:
         #  template:
         #    application/json: '{"base-currency": "$input.params(''base-currency'')"}'
 
-  # Balance
-  BalanceGet.v2:
-    #name: "GET Balance"
-    handler: ${self:provider.environment.balanceFunctions}::Get
-    package: 
-      <<: *package
-    timeout: 30
-    memorySize: 1024
-    events:
-    - http:
-        method: GET
-        path: balance
-        cors: true
-        #request:
-        #  template:
-        #    application/json: '{"base-currency": "$input.params(''base-currency'')"}'
-
   BalanceUpdateFund:
     handler: ${self:provider.environment.balanceFunctions}::Update
     package:
@@ -208,4 +191,15 @@ functions:
     - http:
         method: PUT
         path: balance/update
+        cors: true
+
+  # Fund (under balance fuctions)
+  FundGetForCurrency:
+    handler: ${self:provider.environment.balanceFunctions}::GetFund
+    package: 
+      <<: *package
+    events:
+    - http:
+        method: GET
+        path: fund
         cors: true
