split test files

--- a/FSharp project/UnitTests/UnitTests.fsproj
+++ b/FSharp project/UnitTests/UnitTests.fsproj
@@ -13,6 +13,7 @@
     <Compile Include="Core\Logic\CurrencyLogic.tests.fs" />
     <Compile Include="Core\Logic\CompanyLogic.tests.fs" />
     <Compile Include="Core\Logic\BalanceLogic.test.fs" />
+    <Compile Include="Core\Logic\BalanceLogic GetFund.test.fs" />
     <Compile Include="Core\Logic\BalanceLogic GetBalance.test.fs" />
     <Compile Include="Functions\test helper.fs" />
     <Compile Include="Functions\request validator.tests.fs" />
