--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -14,7 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions-ecosystem/action-remove-labels@v1
-      if: github.event.action != 'labeled'
+      #if: github.event.action != 'labeled'
+      if: github.event.action != 'labeled' || 
+          github.event.action == 'unlabeled' && github.event.label.name == 'pr:draft'
       with:
         labels: |
           build:success
