--- a/FSharp project/Core/Core.fsproj
+++ b/FSharp project/Core/Core.fsproj
@@ -11,7 +11,7 @@
     <Compile Include="entities.fs" />
     <Compile Include="projections.fs" />
     <Compile Include="repositories.fs" />
-    <Compile Include="Logic\error messages.fs" />
+    <Compile Include="Logic\validation.fs" />
     <Compile Include="Logic\helper.fs" />
     <Compile Include="Logic\CurrencyLogic.fs" />
     <Compile Include="Logic\CompanyLogic.fs" />
