--- a/FSharp project/AWS Lambda Emulator/AWS Lambda Emulator.fsproj
+++ b/FSharp project/AWS Lambda Emulator/AWS Lambda Emulator.fsproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,13 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include=".env" />
-    <None Include="README.md" />
+    <Compile Include="LambdaFunctionsMappingGenerator.fs" />
     <Compile Include="Program.fs" />
+    <Content Include="Properties\launchSettings.json__" />
+    <None Include="README.md" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.1" />
+    <ProjectReference Include="..\AwsLambda\AWS Lambda.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="6.0.3" />
   </ItemGroup>
 
 </Project>
