--- a/FSharp project/AWS Lambda Emulator/AWS Lambda Emulator.fsproj
+++ b/FSharp project/AWS Lambda Emulator/AWS Lambda Emulator.fsproj
@@ -1,12 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>AWS_Lambda_Emulator</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Remove="configuration.json" />
+  </ItemGroup>
 
   <ItemGroup>
+    <None Include="configuration.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include=".gitignore" />
     <Compile Include="LambdaFunctionsMappingGenerator.fs" />
     <Compile Include="Program.fs" />
     <None Include="README.md" />
@@ -14,13 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="YamlDotNet.NetCore" Version="1.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\AwsLambda\AWS Lambda.fsproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="6.0.3" />
   </ItemGroup>
 
