--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -6,7 +6,7 @@ env:
 
 on: 
   pull_request:
-    types: [opened, synchronize, reopened, labeled]
+    types: [opened, synchronize, reopened, labeled, unlabeled]
   
 jobs:
   build:
