Lambda Emulator project (#94)
* Created new project
* Update packages. 
* read functions from Serverless
* implement function creation and call to handler
* UI for emulator info
* add "unlabeled" to PR Action trigger

--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -6,7 +6,7 @@ env:
 
 on: 
   pull_request:
-    types: [opened, synchronize, reopened, labeled]
+    types: [opened, synchronize, reopened, labeled, unlabeled]
   
 jobs:
   build:
@@ -55,7 +55,7 @@ jobs:
   label_success:
     runs-on: ubuntu-latest
     #if: github.event.action != 'labeled'
-    if: github.event.action == 'pull_request' || github.event.action == 'synchronize'
+    #if: github.event.action == 'pull_request' || github.event.action == 'synchronize'
     needs: [build, unit-tests, integration-tests]
     steps:
       - uses: actions-ecosystem/action-add-labels@v1
