rename FundUpdateResult and BalanceLogic to FundLogic

--- a/FSharp project/Core/Core.fsproj
+++ b/FSharp project/Core/Core.fsproj
@@ -15,7 +15,7 @@
     <Compile Include="Logic\helper.fs" />
     <Compile Include="Logic\CurrencyLogic.fs" />
     <Compile Include="Logic\CompanyLogic.fs" />
-    <Compile Include="Logic\BalanceLogic.fs" />
+    <Compile Include="Logic\FundLogic.fs" />
   </ItemGroup>
 
   <ItemGroup>
