--- a/serverless.yml
+++ b/serverless.yml
@@ -18,3 +18,10 @@ functions:
           cors: true
 
   asset_list: ${file(./serverless/currency.yml):list}
+
+  test_cron:
+    handler: cron_test
+    package:
+      artifact: functions.zip
+    events: 
+     - schedule: cron(35 * * * *)
