--- a/serverless.yml
+++ b/serverless.yml
@@ -20,7 +20,7 @@ functions:
   asset_list: ${file(./serverless/currency.yml):list}
 
   test_cron:
-    handler: python/functions/cron_test
+    handler: python/functions/cron_test.handle
     package:
       artifact: functions.zip
     events: 
