--- a/serverless.yml
+++ b/serverless.yml
@@ -21,7 +21,7 @@ functions:
 
   test_cron:
     handler: python/functions/cron_test.handle
-    package:
-      artifact: functions.zip
+    #package:
+    #  artifact: functions.zip
     events: 
-     - schedule: cron(40 * * * * *)
+     - schedule: cron(45 * * * * *)
