--- a/.github/workflows/pr checks.yml
+++ b/.github/workflows/pr checks.yml
@@ -1,4 +1,4 @@
-# This workflow is used to chech the code changes in pull requests
+# This workflow is used to check the code changes on pull requests
 
 name: Pull Request Checks
 env:
